--- a/index.html
+++ b/index.html
@@ -1,31 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Fylo data storage component</title>
 
+  <link rel="stylesheet" href="assets/css/style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
-<body>
 
-  You’ve used 815 GB of your storage
+<body class="center column">
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
+  <div class="upload column">
+    <img src="images/logo.svg" alt="">
+    <div class="icons-group container">
+      <div class="icon center">
+        <img src="images/icon-folder.svg" alt="">
+      </div>
+      <div class="icon center">
+        <img src="images/icon-document.svg" alt="">
+      </div>
+      <div class="icon center">
+        <img src="images/icon-upload.svg" alt="">
+      </div>
+    </div>
+  </div>
+  <div class="info center column">
+    <p>
+      You’ve used <strong>815 GB</strong> of your storage
+    </p>
+    <div class="bar">
+      <div class="bar-full">
+        <div class="ball"></div>
+      </div>
+    </div>
+    <div class="storage center">
+      <div class="gambiarra center">
+        <span class="number">
+          185 
+        </span>
+          GB Left
+      </div>
+    </div>
+    <div class="tamanho">
+      <strong >
+        0 GB
+      </strong>
+      <strong>
+        1000 GB
+      </strong>
+    </div>
+    
+
+
+  </div>
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/shinaikos" target="_blank">Shinaikos</a>.
   </div>
 </body>
+
 </html>
