--- a/index.html
+++ b/index.html
@@ -28,50 +28,56 @@
 
 <body class="center column">
 
-  <div class="upload column">
-    <img src="images/logo.svg" alt="">
-    <div class="icons-group container">
-      <div class="icon center">
-        <img src="images/icon-folder.svg" alt="">
-      </div>
-      <div class="icon center">
-        <img src="images/icon-document.svg" alt="">
-      </div>
-      <div class="icon center">
-        <img src="images/icon-upload.svg" alt="">
+  <section id="principal">
+
+    <div class="upload column">
+      <img class="logo" src="images/logo.svg" alt="">
+      <div class="icons-group container">
+        <div class="icon center">
+          <a href="" class="center">
+            <img src="images/icon-folder.svg" alt="">
+          </a>
+        </div>
+        <div class="icon center">
+          <a href="" class="center">
+            <img src="images/icon-document.svg" alt="">
+          </a>
+        </div>
+        <div class="icon center">
+          <a href="" class="center">
+            <img src="images/icon-upload.svg" alt="">
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="info center column">
-    <p>
-      You’ve used <strong>815 GB</strong> of your storage
-    </p>
-    <div class="bar">
-      <div class="bar-full">
-        <div class="ball"></div>
+    <div class="info center column">
+      <p>
+        You’ve used <strong>815 GB</strong> of your storage
+      </p>
+      <div class="bar">
+        <div class="bar-full">
+          <div class="ball"></div>
+        </div>
       </div>
-    </div>
-    <div class="storage center">
-      <div class="gambiarra center">
-        <span class="number">
-          185 
-        </span>
+      <div class="storage center">
+        <div class="gambiarra center">
+          <div class="triangulo"></div>
+          <span class="number">
+            185
+          </span>
           GB Left
+        </div>
+      </div>
+      <div class="tamanho">
+        <strong>
+          0 GB
+        </strong>
+        <strong>
+          1000 GB
+        </strong>
       </div>
     </div>
-    <div class="tamanho">
-      <strong >
-        0 GB
-      </strong>
-      <strong>
-        1000 GB
-      </strong>
-    </div>
-    
-
-
-  </div>
-
+  </section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/shinaikos" target="_blank">Shinaikos</a>.
